# ola

./: main.py  pyproject.toml
src/: main.py
src/Controllers/: TareaController.py  UserControllers.py
src/Database/: gestor_tareas.sgl
src/Moldels/: BaseMoldel.py  SchemasMoldel.py  Tarea.py  TareaMoldel.py  Users.py  UsersMoldel.py  database.py  schemas.py
src/View/: DashboardView.py  LoginView.py  RegisterView.py  dashboard.py
