[project]
name = "ola"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flet>=0.82.2",
    "pydantic[email]>=2.12.5",
]

[project.scripts]
# Aqui definimos el comando corto.
# Importante: Quitamos el prefijo "src". porque definimos "src" como la raiz.
app = "main:main"

[tool.uv]
package = true 

# Esta seccion es crucial para que Python vea el contenido de src como el nivel raiz 
[tool.setuptools.package-dir]
"" = "src"
